# Realms

./: .gitmodules  CMakeLists.txt  README.md  Realms.sln  Realms1.sln
ExtLibs/libs-msvc/libs-x64/: glfw3.lib  sfml-audio-s-d.lib  sfml-main-d.lib  sfml-network-s-d.lib  sfml-system-s-d.lib
Realms1/: RealmApplication.h  Realms1.cpp  Realms1.vcxproj  Realms1.vcxproj.filters  _MemLeakMonitor.h  _Preprocess.h  info.lua
Realms1/Base/Allocators/: Allocator.cpp  Allocator.h  Allocator.inl  FreeListAllocator.cpp  FreeListAllocator.h  LinearAllocator.h  PoolAllocator.h  ProxyAllocator.h  StackAllocator.h
Realms1/Base/Logging/: DebugConsoleLogger.cpp  DebugConsoleLogger.h  FileLogger.cpp  ILogged.cpp  LogTime.cpp  LoggerHandler.cpp
Realms1/Base/Math/: IVoxel.h  Rect.h  Vec.h  Vec.inl  Vec2.h  Vec3.h  VoxelMath.cpp
Realms1/Models/Blocks/: Dirt.vox  Wood.vox
Realms1/Module/ECS/: Entity.inl  EntityManager.cpp  EntityManager.h  EventManager.cpp  EventsListener.cpp  GameCore.cpp  GameCore.h  GameCoreSettings.cpp  GameCoreSettings.h  IEvent.h  IGameLoaderSystem.h  ISystem.cpp  SystemManager.cpp  SystemManager.inl  TransformComponent.h
Realms1/Module/GUI/: Layer.h  UIConstraint.cpp  UIConstraint.h
Realms1/Module/Graphics/: AspectRatio.cpp  AspectRatio.h  Camera.cpp  Camera.h  GLError.cpp  GLError.h  GameRenderer.cpp  GameShaderProgram.cpp  GameShaderProgram.h  GraphicsManager.cpp  GraphicsManager.h  IDrawable.h  IMesh.h  IRenderer.cpp  IRenderer.h  IShaderProgram.cpp  IShaderProgram.h  MeshNameSanitizer.cpp  MeshRegister.cpp  MeshRegister.h  NewCamera.h  OpenGL.h  ScreenShaderProgram.h  Shader.cpp  Shader.h  ShaderPrototypeLights.h  StaticMesh.cpp  StaticMesh.h  SwapChain.h  UITexture.cpp  UITexture.h  ViewportFrameBuffer.h
Realms1/Module/Input/: AssignSanitizer.cpp  InputAssignement.cpp  InputAssignement.h  InputManager.cpp  InputManager.h  InputMap.cpp  InputMap.h
Realms1/Module/World/: BlockRegister.cpp  Chunk.h  ChunkManager.h  WorldManager.cpp
Realms1/Utility/Console/: CommandManager.h
Realms1/Utility/FileIO/: SettingsFile.h  VoxFileParser.h  Voxelite.h
Realms1/Utility/ModManagement/: IModContainer.cpp  ModLoader.h
Realms1/Utility/MultiThreading/: ThreadPool.h
RealmsVK/: Constants.h  CoreTypes.h  FIFOJobScheduler.cpp  IJobScheduler.cpp  IRenderPipeline.cpp  Main.cpp  RealmApplication.h  RealmApplicationMT.h  RealmApplication_old.h  RealmsVK.h  RealmsVK.vcxproj  RealmsVK.vcxproj.filters  VKExemple.h  VulkanSwapChain.cpp  _MemLeakMonitor.h  _Preprocess.h
RealmsVK/Base/: Exception.h  IBase.h  RlmsException.h  Statistics.h  Version.cpp  Version.h
RealmsVK/Base/Allocators/: Allocator.cpp  Allocator.h  Allocator.inl  AllocatorProxy.h  BlockAllocator.cpp  BlockAllocator.h  BlockAllocatorProxy.cpp  BlockAllocatorProxy.h  DynamicLinearAllocator.cpp  DynamicLinearAllocator.h  EndAllocator.cpp  EndAllocator.h  FixedLinearAllocator.cpp  FixedLinearAllocator.h  FreeListAllocator.cpp  FreeListAllocator.h  IAllocator.cpp  IAllocator.h  IAllocator.inl  InvalidMemory.cpp  InvalidMemory.h  LinearAllocator.cpp  LinearAllocator.h  MasqueradeAllocator.cpp  MasqueradeAllocator.h  PointerMath.h  PointerMath.inl  PoolAllocator.cpp  ProxyAllocator.cpp  ProxyAllocator.h  ScopeStack.h  SmallBlockAllocator.cpp  SmallBlockAllocator.h  StackAllocator.cpp
RealmsVK/Base/Logging/: DebugConsoleLogger.cpp  FileLogger.cpp  FileLogger.h  ILogged.h  LogTime.cpp  LogTime.h  Logger.cpp  Logger.h  LoggerHandler.cpp  LoggerHandler.h
RealmsVK/Base/Math/: Octree.h  Ratio.h  Rect.h  Vec.inl  Vec2.h  Vec3.h  Vec3.inl  VoxelMath.cpp  VoxelMath.h
RealmsVK/Base/Timer/: ApplicationTime.cpp  ApplicationTime.h  ITimer.h  TimeFormat.cpp  TimeFormat.h
RealmsVK/Gameplay/: ghost.lua
RealmsVK/Models/: Air.vox  Workbench.vox
RealmsVK/Models/Default/: Perso_m1.vox
RealmsVK/Module/ECS/: ComponentManager.cpp  ComponentManager.h  ComponentManager.inl  ECS.cpp  ECS.h  ECSException.h  ECS_Core.cpp  ECS_Core.h  Entity.cpp  Entity.h  Entity.inl  EntityManager.cpp  EntityManager.h  EventManager.h  EventManager.inl  EventsListener.h  GameCore.cpp  GameCore.h  GameCoreSettings.h  IComponent.cpp  IComponent.h  IGameLoaderSystem.cpp  ISystem.h  MeshComponent.h  SystemManager.cpp  SystemManager.h  SystemManager.inl  TransformComponent.cpp  TransformComponent.h
RealmsVK/Module/GUI/: IWidget.h
RealmsVK/Module/Graphics/: AspectRatio.cpp  AspectRatio.h  Camera.cpp  GameRenderer.cpp  GameRenderer.h  GameShaderProgram.cpp  GameShaderProgram.h  GraphicsManager.cpp  GraphicsManager.h  GraphicsManager_Old.cpp  GraphicsManager_Old.h  (+38 more)
RealmsVK/Ressources/: info.lua  luaExemple.lua
Sample-Test1/: Sample-Test1.vcxproj
UnitTests-Realms/: UnitTests-Realms.vcxproj  UnitTests-Realms.vcxproj.filters  pch_allocators.cpp  test_FreeListAllocator.cpp  test_LinearAllocator.cpp
UnitTests-RealmsVK/: Test_vec3.cpp  UnitTests-RealmsVK.vcxproj  UnitTests-RealmsVK.vcxproj.filters  pch_loggers.cpp  test.cpp  test_AssignSanitizer.cpp  test_Bindings_Component.cpp  test_Bindings_ComponentManager.cpp  test_Bindings_Entity.cpp  test_Bindings_EntityManager.cpp  test_ComponentManager.cpp  test_ECS.cpp  test_Entity.cpp  test_EntityManager.cpp  test_FreeListAllocator.cpp  test_IComponent.cpp  test_LinearAllocator.cpp  test_MasqueradeAllocator.cpp  test_MeshSanitizer.cpp  test_PoolAllocator.cpp  test_ProxyAllocator.cpp  test_StackAllocator.cpp
(+136 files in other folders)
